src/components/collection/card/CollectionCard.less
@import '../../../../resources/styles/_antd-theme.less';
@import '../../../../resources/styles/_keyframes';

@min-preview-width: 140px;
@preview-gutter: 20px;

.collection-card {
  animation: slide-in 0.5s 0s both;
  .animation-delay(10);

  min-height: 335px;
  margin: 15px 0 10px;
  padding: 20px 20px 56px;
  border-radius: 8px;
  background-color: @shade-2;
  position: relative;

  .top-right-icon {
    position: absolute;
    top: 20px;
    right: 20px;

    font-size: 20px;
    color: @btn-primary-bg;
    cursor: pointer;
  }

  .collection-title {
    margin-bottom: 0px;
    font-size: 18px;

    &.clamp-2-lines {
      max-height: 48px;
      text-overflow: ellipsis;
      overflow: hidden;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      display: -webkit-box;
      width: 90%;
    }
  }

  .view-collection {
    font-weight: bold;
    position: absolute;
    right: 20px;
    bottom: 10px;
  }

  .collection-video-previews {
    display: grid;
    margin: 15px 0 10px;
    grid-column-gap: @preview-gutter;
    grid-template-columns: repeat(
      auto-fill,
      minmax(@min-preview-width, calc(25% - 3 * @preview-gutter / 4))
    );
    @media (max-width: @screen-md) {
      grid-column-gap: (@preview-gutter / 4);
      grid-row-gap: (@preview-gutter / 4);
      grid-template-columns: repeat(
        auto-fill,
        minmax(@min-preview-width, calc(50% - (@preview-gutter / 4) / 2))
      );
      grid-template-rows: repeat(2, auto);
    }

    .thumbnail-container {
      overflow: hidden;
      height: 100%;
      width: 100%;
      background-size: cover;
      background-position: center;
    }

    .video-container {
      overflow: hidden;
      height: 0;
      padding-top: 55.5%;
      margin: 15px 0 10px;
      position: relative;

      .video-container-inner {
        background-color: black;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .plyr {
          min-width: @min-preview-width;
        }
      }
    }

    .collection-video-preview {
      animation: fade-in 0.6s ease;

      .title {
        @media (max-width: @screen-md) {
          display: none !important;
        }
        margin-top: 8px;
        margin-bottom: 0px;

        font-size: 14px;
        font-weight: bold;
        line-height: 18px;

        &.clamp-2-lines {
          max-height: 36px;
          text-overflow: ellipsis;
          overflow: hidden;
          -webkit-line-clamp: 2;
          -webkit-box-orient: vertical;
          display: -webkit-box;
        }
      }

      .duration {
        @media (max-width: @screen-md) {
          display: none;
        }
        color: @shade-5;
        font-size: 14px;
        line-height: 24px;
        font-weight: bold;
      }

      .boclips-player {
        width: 100%;
      }

      &.skeleton {
        * {
          .loading-blue();
        }

        .title {
          max-height: 50px;
          text-overflow: ellipsis;
          overflow: hidden;
          -webkit-line-clamp: 2;
          -webkit-box-orient: vertical;
          display: -webkit-box;

          @media (max-width: @screen-md) {
            display: none;
          }
          margin-top: 8px;
          height: 20px;
          width: 150px;
        }

        .subtitle {
          @media (max-width: @screen-md) {
            display: none;
          }
          margin-top: 8px;
          height: 20px;
          width: 100px;
        }
      }
    }

    .video-counter {
      display: flex;
      flex-flow: column;
      align-items: center;
      justify-content: center;
      background-color: @shade-3;
      color: @shade-5;
      font-size: 52px;
      line-height: 50px;
      text-align: center;
      height: 100%;

      .label {
        color: @shade-1;
        font-size: 20px;
        font-weight: bold;
        line-height: 25px;
      }
    }

    .video-container-padding .video-container-inner{
      background-color: @shade-3;
    }
  }

  &.tiny {
    min-height: 290px;
    padding: 20px 20px 20px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    align-content: space-between;

    .highlight {
      .last-updated {
        display: none;
      }
    }
    .collection-video-previews {
      grid-column-gap: (@preview-gutter / 4);
      grid-row-gap: (@preview-gutter / 4);
      grid-template-columns: repeat(
        auto-fill,
        minmax(20px, calc(50% - (@preview-gutter / 4) / 2))
      );
      grid-template-rows: repeat(2, auto);

      .collection-video-preview {
        .title {
          display: none !important;
        }

        .duration {
          display: none;
        }

        &.skeleton {
          * {
            .loading-blue();
          }

          .title {
            display: none;
            margin-top: 8px;
            height: 20px;
            width: 150px;
          }

          .subtitle {
            display: none;
            margin-top: 8px;
            height: 20px;
            width: 100px;
          }
        }
      }

      .video-counter {
        display: flex;
        flex-flow: column;
        align-items: center;
        justify-content: center;
        background-color: @shade-3;
        color: @shade-5;
        font-size: 52px;
        line-height: 50px;
        text-align: center;
        height: 100%;

        .label {
          color: @shade-1;
          font-size: 20px;
          font-weight: bold;
          line-height: 25px;
        }
      }
    }
  }

  &.skeleton {
    background-color: white;
    border: 1px solid #eeeeee;
    .ant-skeleton-title {
      width: 400px;
    }

    .ant-skeleton-avatar {
      margin: 29px 0px;
    }

    .collection-video-preview {
      display: flex;
    }

    &.tiny {
      .ant-skeleton-title {
        width: 200px;
        margin-bottom: 20px;
      }

      .ant-skeleton-avatar {
        margin: 0px;
      }
    }
  }
}

